--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "@ng-bootstrap/ng-bootstrap": "^2.0.0",
         "@ngx-translate/core": "^10.0.1",
         "@ngx-translate/http-loader": "^3.0.1",
+        "@types/file-saver": "^1.3.0",
         "chart.js": "^2.7.2",
         "core-js": "^2.5.5",
+        "file-saver": "^1.3.8",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
         "ngx-mask": "^2.9.3",
